# conversation-control-plane

./: LICENSE  MANIFEST.yaml  README.md  pyproject.toml
docs/: conversation-control-plane-applicability.md  conversation-control-plane-loop-playbook.md  conversation-control-plane-scale-smoke.md  conversation-control-plane-sdk.md  conversation-control-plane-trace-export.md  conversation-turn-lifecycle-diagram.md  host-transition-discipline.md
examples/: README.md  __init__.py  e2e_host_loop.py
examples/cyber_risk_assessment/: README.md  __init__.py  agent_stub.py  assessment_ir.py  decide_integration.md  host_sketch.py  kind_spec.py
examples/integrations/: README.md  wrap_langgraph.py  wrap_openai_loop.py  wrap_python_loop.py
reference/: MANIFEST.yaml
reference/api/services/conversation_control/: chat_dispatch_contract.py  contract.py  decide.py  delivery_order_contract.py  discovery_intent.py  dispatch_phase.py  handoff_guard.py  kind_spec.py  ledger.py  ledger_journal.py  ledger_outbox.py  multi_turn_stream_contract.py  post_save_setup_entry.py  projection_rebuild.py  sdk_identity.py
reference/conversation_control_plane/: __init__.py
reference/conversation_control_plane.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: MANIFEST.yaml
src/conversation_control_plane/: __init__.py  chat_dispatch_contract.py  contract.py  control_payload.py  decide.py  delivery_order_contract.py  dispatch_phase.py  failure_modes.py  handoff_guard.py  kind_spec.py  ledger.py  ledger_keys.py  multi_turn_stream_contract.py  post_save_setup_entry.py  projection_rebuild.py  reset_commands.py  sdk_identity.py  session_staleness.py  turn_session_discipline.py  turn_timeout.py
tests/: conftest.py  test_claim_fail_closed.py  test_delivery_order_contract.py  test_host_envelopes.py  test_package_surface.py  test_public_doc_bundle.py  test_sdk_deliverables.py
