[project]
name = "conversation-control-plane"
version = "0.1.0"
description = "DB-authoritative conversation control plane for multi-agent chat"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["reference"]
